airflow/logs/scheduler/2025-01-30/helloworld_dag.py.log
[2025-01-30T04:35:13.902+0000] {processor.py:186} INFO - Started process (PID=1129506) to work on /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:35:13.903+0000] {processor.py:914} INFO - Processing file /root/airflow/dags/helloworld_dag.py for tasks to queue
[2025-01-30T04:35:13.906+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:35:13.905+0000] {dagbag.py:588} INFO - Filling up the DagBag from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:35:13.912+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:35:13.910+0000] {dagbag.py:387} ERROR - Failed to import: /root/airflow/dags/helloworld_dag.py
Traceback (most recent call last):
  File "/root/airflow-venv/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/root/airflow/dags/helloworld_dag.py", line 3, in <module>
    from airflow.modules.dag import DAG
ModuleNotFoundError: No module named 'airflow.modules'
[2025-01-30T04:35:13.912+0000] {processor.py:927} WARNING - No viable dags retrieved from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:35:13.951+0000] {processor.py:208} INFO - Processing /root/airflow/dags/helloworld_dag.py took 0.057 seconds
[2025-01-30T04:36:48.354+0000] {processor.py:186} INFO - Started process (PID=1129596) to work on /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:36:48.357+0000] {processor.py:914} INFO - Processing file /root/airflow/dags/helloworld_dag.py for tasks to queue
[2025-01-30T04:36:48.361+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:36:48.361+0000] {dagbag.py:588} INFO - Filling up the DagBag from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:36:48.368+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:36:48.366+0000] {dagbag.py:387} ERROR - Failed to import: /root/airflow/dags/helloworld_dag.py
Traceback (most recent call last):
  File "/root/airflow-venv/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/root/airflow/dags/helloworld_dag.py", line 3
    from apache-airflow.modules.dag import DAG
               ^
SyntaxError: invalid syntax
[2025-01-30T04:36:48.369+0000] {processor.py:927} WARNING - No viable dags retrieved from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:36:48.409+0000] {processor.py:208} INFO - Processing /root/airflow/dags/helloworld_dag.py took 0.071 seconds
[2025-01-30T04:40:16.697+0000] {processor.py:186} INFO - Started process (PID=1129695) to work on /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:40:16.700+0000] {processor.py:914} INFO - Processing file /root/airflow/dags/helloworld_dag.py for tasks to queue
[2025-01-30T04:40:16.704+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:40:16.704+0000] {dagbag.py:588} INFO - Filling up the DagBag from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:40:16.714+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:40:16.711+0000] {dagbag.py:387} ERROR - Failed to import: /root/airflow/dags/helloworld_dag.py
Traceback (most recent call last):
  File "/root/airflow-venv/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/root/airflow/dags/helloworld_dag.py", line 3, in <module>
    from airflow.modules.dag import DAG
ModuleNotFoundError: No module named 'airflow.modules'
[2025-01-30T04:40:16.714+0000] {processor.py:927} WARNING - No viable dags retrieved from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:40:16.754+0000] {processor.py:208} INFO - Processing /root/airflow/dags/helloworld_dag.py took 0.066 seconds
[2025-01-30T04:41:19.208+0000] {processor.py:186} INFO - Started process (PID=1129755) to work on /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:41:19.210+0000] {processor.py:914} INFO - Processing file /root/airflow/dags/helloworld_dag.py for tasks to queue
[2025-01-30T04:41:19.214+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:41:19.213+0000] {dagbag.py:588} INFO - Filling up the DagBag from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:41:19.220+0000] {logging_mixin.py:190} INFO - [2025-01-30T04:41:19.218+0000] {dagbag.py:387} ERROR - Failed to import: /root/airflow/dags/helloworld_dag.py
Traceback (most recent call last):
  File "/root/airflow-venv/lib/python3.12/site-packages/airflow/models/dagbag.py", line 383, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/root/airflow/dags/helloworld_dag.py", line 3, in <module>
    from airflow.modules.dag import DAG
ModuleNotFoundError: No module named 'airflow.modules'
[2025-01-30T04:41:19.221+0000] {processor.py:927} WARNING - No viable dags retrieved from /root/airflow/dags/helloworld_dag.py
[2025-01-30T04:41:19.249+0000] {processor.py:208} INFO - Processing /root/airflow/dags/helloworld_dag.py took 0.050 seconds
